<resources>
    <string name="app_name">Vedas</string>
    <string name="search_text">Search...</string>
    <string name="videos">Videos</string>
    <string name="books">Books</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="home">home</string>
    <string name="login">login</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="sloan_name">Everything you want show here</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="feedback">Feedback</string>
    <string name="Profile_header">Profile</string>
    <string name="v_e_d_a_s">V.E.D.A.S</string>
    <string name="android_developer">Android Developer</string>


</resources>