<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"/>

        <item android:id="@+id/nav_search"
            android:title="@string/search_text"
            android:icon="@drawable/search_icon"/>

        <item android:id="@+id/nav_book"
            android:title="@string/books"
            android:icon="@drawable/baseline_library_books_24"/>

        <item android:id="@+id/nav_video"
            android:title="@string/videos"
            android:icon="@drawable/baseline_video_library_24"/>



    </group>

    <item android:title="@string/Profile_header">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/baseline_account_circle_24"/>

                <item android:id="@+id/nav_feedback"
                    android:title="@string/feedback"
                    android:icon="@drawable/baseline_feedback_24"/>

                <item android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/baseline_logout_24"/>


            </group>
        </menu>


    </item>
</menu>